--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@truffle/contract": "^4.6.31",
+    "bootstrap": "^5.3.2",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.1.0",
     "lite-server": "^2.6.1",
     "nodemon": "^3.0.1",
-    "truffle": "^5.11.5"
+    "truffle": "^5.11.5",
+    "truffle-contract": "^4.0.31",
+    "web3": "^0.20.7"
   }
 }
